// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Navbar Links Testing that all links are present 1`] = `
Array [
  <a
    aria-current="page"
    class="active"
    href="/"
  >
    Home
  </a>,
]
`;

exports[`Testing Navbar Links Testing that all links are present 2`] = `
Array [
  <a
    class=""
    href="/calculator"
  >
    Calculator
  </a>,
]
`;

exports[`Testing Navbar Links Testing that all links are present 3`] = `
Array [
  <a
    class=""
    href="/quote"
  >
    Quote
  </a>,
]
`;
